Bug 14015 - pty regressed again, breaking expect and gcc's testsuite
Summary: pty regressed again, breaking expect and gcc's testsuite
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_other
URL:
Keywords:
Depends on:
Blocks: 13615
  Show dependency tree
 
Reported: 2009-08-19 22:25 UTC by Rafael J. Wysocki
Modified: 2009-09-06 11:57 UTC (History)
0 users

See Also:
Kernel Version: 2.6.31-rc6
Tree: Mainline
Subsystem:
Regression: Yes


Attachments

Description Rafael J. Wysocki 2009-08-19 22:25:19 UTC
Subject    : [BUG] 2.6.31-rc6: pty regressed again, breaking expect and gcc's testsuite
Submitter  : Mikael Pettersson <mikpe@it.uu.se>
Date       : 2009-08-14 23:41
References : http://marc.info/?l=linux-kernel&m=125029329805643&w=4

This entry is being used for tracking a regression from 2.6.30.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2009-08-24 18:30:53 UTC
On Monday 24 August 2009, Mikael Pettersson wrote:
> On Wed, 19 Aug 2009 22:27:02 +0200 (CEST), Rafael J. Wysocki wrote:
> > The following bug entry is on the current list of known regressions
> > from 2.6.30.  Please verify if it still should be listed and let me know
> > (either way).
> > 
> > 
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=3D14015
> > Subject             : pty regressed again, breaking expect and gcc's
> testsuite
> > Submitter   : Mikael Pettersson <mikpe@it.uu.se>
> > Date                : 2009-08-14 23:41 (6 days old)
> > References  : http://marc.info/?l=3Dlinux-kernel&m=3D125029329805643&w=3D4
> 
> The good news is that I don't see this issue any more with 2.6.31-rc7
> on x86. The bad news is that the first time I reported this issue, for
> -rc3 or -rc4 I think, I thought it was fixed in -rc5 only to see it
> reappear in -rc6 on x86 and in -rc5 on ARM. So I'd like to keep this
> open another week while I run more regression tests on non-x86 platforms.
> 
> While I don't suspect any arch-specific problems in the pty/tty code,
> I do suspect timing/race-type problems which are obviously affected
> by platform speed etc.
Comment 2 Rafael J. Wysocki 2009-08-28 18:55:03 UTC
On Thursday 27 August 2009, Mikael Pettersson wrote:
> On Tue, 25 Aug 2009 22:34:53 +0200 (CEST), Rafael J. Wysocki wrote:
> > The following bug entry is on the current list of known regressions
> > from 2.6.30.  Please verify if it still should be listed and let me know
> > (either way).
> > 
> > 
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=3D14015
> > Subject             : pty regressed again, breaking expect and gcc's
> testsuite
> > Submitter   : Mikael Pettersson <mikpe@it.uu.se>
> > Date                : 2009-08-14 23:41 (12 days old)
> > References  : http://marc.info/?l=3Dlinux-kernel&m=3D125029329805643&w=3D4
> 
> Not fixed. With 2.6.31-rc7 I'm still seeing repeatable testsuite
> failures on powerpc64. Reverting to 2.6.30 makes the failures go away.
Comment 3 Rafael J. Wysocki 2009-09-01 18:40:47 UTC
On Tuesday 01 September 2009, Mikael Pettersson wrote:
> Mikael Pettersson writes:
>  > Rafael J. Wysocki writes:
>  >  > On Saturday 29 August 2009, Mikael Pettersson wrote:
>  >  > > Mikael Pettersson writes:
>  >  > >  > Rafael J. Wysocki writes:
>  >  > >  >  > On Thursday 27 August 2009, Mikael Pettersson wrote:
>  >  > >  >  > > On Tue, 25 Aug 2009 22:34:53 +0200 (CEST), Rafael J. Wysocki
>  wrote:
>  >  > >  >  > > > The following bug entry is on the current list of known
>  regressions
>  >  > >  >  > > > from 2.6.30.  Please verify if it still should be listed
>  and let me know
>  >  > >  >  > > > (either way).
>  >  > >  >  > > > 
>  >  > >  >  > > > 
>  >  > >  >  > > > Bug-Entry   :
>  http://bugzilla.kernel.org/show_bug.cgi?id=3D14015
>  >  > >  >  > > > Subject             : pty regressed again, breaking expect
>  and gcc's testsuite
>  >  > >  >  > > > Submitter   : Mikael Pettersson <mikpe@it.uu.se>
>  >  > >  >  > > > Date                : 2009-08-14 23:41 (12 days old)
>  >  > >  >  > > > References  :
>  http://marc.info/?l=3Dlinux-kernel&m=3D125029329805643&w=3D4
>  >  > >  >  > > 
>  >  > >  >  > > Not fixed. With 2.6.31-rc7 I'm still seeing repeatable
>  testsuite
>  >  > >  >  > > failures on powerpc64. Reverting to 2.6.30 makes the failures
>  go away.
>  >  > >  >  > 
>  >  > >  >  > Thanks for the update.
>  >  > >  >  > 
>  >  > >  >  > I guess 2.6.31-rc8 doesn't make any difference, does it?
>  >  > >  > 
>  >  > >  > I've scheduled a number of gcc bootstraps and testsuite runs
>  >  > >  > with -rc8 on x86, powerpc64, and arm. I'll post an update in
>  >  > >  > a day or so.
>  >  > > 
>  >  > > 2.6.31-rc8 results in bogus testsuite failures on all three
>  platforms.
>  >  > 
>  >  > That may be a result of the known inotify borkage in -rc8 that has been
>  fixed
>  >  > in the current Linus' tree.
>  > 
>  > No, it's the same old semi-random pty breakage. My kernels are built
>  > without inotify.
>  > 
>  > A bisection has identified Alan's
>  > 
>  > pty: Rework the pty layer to use the normal buffering logic
>  > d945cb9cce20ac7143c2de8d88b187f62db99bdc 
>  > 
>  > as the culprit. This patch introduces a massive number of bogus
>  > failures in the gcc testsuite. Subsequent pty/tty patches do fix
>  > most of those failures, but clearly not all.
> 
> Starting with 2.6.31-rc8 and reverting
> 
> 85dfd81dc57e8183a277ddd7a56aa65c96f3f487 pty: fix data loss when stopped
> (^S/^Q)
> d945cb9cce20ac7143c2de8d88b187f62db99bdc pty: Rework the pty layer to use the
> normal buffering logic
> 
> in that order gives me a kernel that works on both x86 and powerpc64.
> 
> So the bug is definitely limited to the pty buffering logic change.

Note You need to log in before you can comment on or make changes to this bug.